# running-process

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  Dockerfile.linux-build  Dockerfile.linux-lint  Dockerfile.linux-pytest  ENHANCE.md  FIX_PTY.md  FIX_VERSION.md  ISSUED.md  LINTING.md  LINUX_FIX_USING_DOCKER.md  LOOP.md  PLAN.md  PLAN_NATIVE_RUST_REFACTOR.md  PLAN_TINY_PDB.md  PR_BODY_soldr_enforcement.md  README.md  REFACTOR_NATIVE_PROCESS.md  TASK.md  TODO.md  UPDATE.md  WINDOWS_CONPTY_VERSION.txt  _cargo  _rustc  _rustfmt  activate  build.py  clippy.toml  conpty-sidecar.sha256.toml  install  install.ps1  install.sh  lint  pty.md  publish  (+5 more)
crates/daemon-trampoline/: Cargo.toml  README.md
crates/daemon-trampoline/src/: README.md  main.rs
crates/daemon-trampoline/tests/: README.md  stdio_detach.rs
crates/running-process/: Cargo.toml  README.md  build.rs
crates/running-process-client/: Cargo.toml
crates/running-process-client/src/: client.rs  lib.rs  pipe_session.rs  pty_session.rs
crates/running-process-core/: Cargo.toml
crates/running-process-core/src/: console_detect.rs  containment.rs  helpers.rs  lib.rs  originator.rs  public_symbols.rs  rust_debug.rs  sanitized.rs  spawn.rs  spawn_imp_unix.rs  spawn_imp_windows.rs  tests.rs  windows.rs
crates/running-process-core/src/pty/: detachable_pty_session.rs  mod.rs  native_pty_process.rs  pty_posix.rs  pty_windows.rs  terminal_input.rs
crates/running-process-core/tests/: containment_test.rs  detachable_pty_session_test.rs  fs_adversarial_test.rs  interactive_pty_session_test.rs  originator_test.rs  process_core_test.rs  pty_conhost_job_test.rs  spawn_test.rs
crates/running-process-daemon/: Cargo.toml
crates/running-process-daemon/src/: attach_stream.rs  client.rs  config.rs  handlers.rs  handlers_tests.rs  idle.rs  lib.rs  main.rs  pipe_attach_stream.rs  pipe_sessions.rs  pty_sessions.rs  reaper.rs  registry.rs  runtime_gc.rs  server.rs  shadow.rs
crates/running-process-daemon/src/handlers/: core.rs  kill.rs  maintenance.rs  mod.rs  pipe_sessions_handlers.rs  process_tree.rs  pty_sessions_handlers.rs  services.rs  (+3 more)
crates/running-process-daemon/tests/: autostart_test.rs  backlog_accumulation_test.rs  cross_process_pty_attach_test.rs  fast_ctrl_c_handoff_test.rs  integration.rs  non_tty_attach_test.rs  pipe_session_attach_test.rs  pty_session_attach_test.rs  resize_rpc_test.rs  runpm_service_stubs.rs  sessions_bulk_ops_test.rs  sessions_log_test.rs  termination_outcome_test.rs  tree_kill_test.rs
crates/running-process-observer/: Cargo.toml
crates/running-process-observer-interposer-linux/: Cargo.toml
crates/running-process-observer-interposer-linux/src/: lib.rs
crates/running-process-observer-interposer-macos/: Cargo.toml
crates/running-process-observer-interposer-macos/src/: lib.rs
crates/running-process-observer-interposer-windows/: Cargo.toml
crates/running-process-observer-interposer-windows/src/: lib.rs
crates/running-process-observer/src/: inject_unix.rs  inject_windows.rs  lib.rs
crates/running-process-observer/tests/: inject_smoke_test.rs  interposer_diagnostic_windows.rs  interposer_integration_linux.rs  interposer_integration_macos.rs  interposer_integration_windows.rs
crates/running-process-proto/: Cargo.toml  build.rs
crates/running-process-proto/proto/: daemon.proto
crates/running-process-proto/src/: lib.rs
crates/running-process-py/: Cargo.toml
crates/running-process-py/src/: containment.rs  daemon_client.rs  debug_traces.rs  helpers.rs  idle_detector.rs  lib.rs  metrics.rs  originator.rs  pid_tracking.rs  priority.rs  process.rs  process_tree.rs  pty_buffer.rs  pty_posix.rs  pty_process.rs  pty_windows.rs  public_symbols.rs  py_native_process.rs  registry.rs  signal_bool.rs  terminal_input.rs
crates/running-process-win-gnu-bridge/: Cargo.toml  README.md
crates/running-process-win-gnu-bridge/src/: conpty.rs  lib.rs
crates/running-process/examples/: handoff_rollout_evidence.rs
crates/running-process/fuzz/: Cargo.toml
crates/running-process/proto/: broker_v1_envelope.proto  buf.yaml  daemon.proto
crates/running-process/src/: README.md  console_detect.rs  containment.rs  environment.rs  helpers.rs  lib.rs  originator.rs  process_tree.rs  public_symbols.rs  runpm_config.rs  rust_debug.rs  spawn.rs  spawn_imp_unix.rs  spawn_imp_windows.rs  systemd_killmode.rs  terminal_graphics.rs  tests.rs  types.rs  unix.rs  windows.rs
crates/running-process/tests/: README.md  broker_v2_scaffold_accepts_connection.rs  brokered_backend_ui.rs  containment_test.rs  daemon_autostart_test.rs  daemon_backlog_accumulation_test.rs  daemon_cross_process_pty_attach_test.rs  daemon_fast_ctrl_c_handoff_test.rs  daemon_non_tty_attach_test.rs  daemon_pipe_session_attach_test.rs  daemon_pty_session_attach_test.rs  daemon_resize_rpc_test.rs  daemon_runpm_save_resurrect.rs  daemon_runpm_service_stubs.rs  daemon_sessions_bulk_ops_test.rs  daemon_sessions_log_test.rs  daemon_tee_ring_test.rs  daemon_termination_outcome_test.rs  daemon_tree_kill_test.rs  daemon_tui_repaint_test.rs  fs_adversarial_test.rs  interactive_pty_session_test.rs  originator_test.rs  process_core_test.rs  pty_conhost_job_test.rs  pty_master_public_api_test.rs  pty_mitm_paste_test.rs  pty_mitm_stdin_test.rs  pty_unix_teardown_test.rs  runpm_boot_autostart_fixtures.rs  runpm_toml_config.rs  spawn_test.rs  terminal_graphics_capabilities_test.rs
crates/runpm-cli/: Cargo.toml
crates/runpm-cli/src/: main.rs
crates/test-watchdog/: Cargo.toml
crates/test-watchdog/src/: lib.rs
crates/test-watchdog/tests/: hang_dump.rs
testbins/: Cargo.toml
testbins/cwd-reporter/: Cargo.toml
testbins/dies_after_spawn/: Cargo.toml
testbins/emitter/: Cargo.toml
testbins/emitter/src/: main.rs
testbins/env-dump/: Cargo.toml
testbins/env-dump/src/: main.rs
testbins/env-reporter/: Cargo.toml
testbins/env-reporter/src/: main.rs
testbins/sleeper/: Cargo.toml
testbins/sleeper/src/: main.rs
testbins/spawner/: Cargo.toml
testbins/spawner/src/: main.rs
testbins/stubborn/: Cargo.toml
(+581 files in other folders)
