[workspace]
resolver = "2"
members = [
    "crates/running-process-core",
    "crates/running-process-py",
]

[workspace.package]
version = "3.0.5"
edition = "2021"
rust-version = "1.85"
license = "BSD-3-Clause"
repository = "https://github.com/zackees/running-process"
homepage = "https://github.com/zackees/running-process"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"

[profile.release]
debug = "line-tables-only"
split-debuginfo = "packed"
strip = "none"
