[workspace]
resolver = "2"
members = [
    "crates/running-process",
    "crates/running-process-observer",
    "crates/running-process-observer-interposer-linux",
    "crates/running-process-observer-interposer-macos",
    "crates/running-process-observer-interposer-windows",
    "crates/running-process-py",
    "crates/running-process-win-gnu-bridge",
    "crates/test-watchdog",
    "testbins",
]

[workspace.package]
version = "4.5.7"
edition = "2021"
rust-version = "1.85"
license = "BSD-3-Clause"
repository = "https://github.com/zackees/running-process"
homepage = "https://github.com/zackees/running-process"

[workspace.dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"

# Phase 0 of #228: workspace-wide lints. `disallowed_methods` is wired
# through `clippy.toml` at the workspace root so every member crate
# refuses bincode serialization (broker wire stays prost-only).
[workspace.lints.clippy]
disallowed_methods = "deny"

[profile.release]
debug = true
strip = "none"

[profile.dev]
debug = true
strip = "none"
