[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "running_process"
version = "3.1.0"
description = "A Rust-backed subprocess wrapper with split stdout/stderr streaming"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
license-files = ["LICENSE"]
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = []

[project.scripts]
running-process = "running_process.cli:main"
running-processor = "running_process.processor_cli:main"

[project.urls]
Homepage = "https://github.com/zackees/running-process"
Repository = "https://github.com/zackees/running-process"
Issues = "https://github.com/zackees/running-process/issues"

[dependency-groups]
dev = ["maturin[zig]>=1.7,<2", "pytest>=8.0.0", "pytest-cov>=6.0.0", "ruff>=0.8.0", "soldr>=0.7.0"]

[tool.maturin]
manifest-path = "crates/running-process-py/Cargo.toml"
module-name = "running_process._native"
python-source = "src"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "build.py" },
    { file = "src/**/*.py" },
    { file = "crates/**/*.rs" },
    { file = "crates/**/*.toml" },
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
markers = [
    "live: exercises real OS process and signal behavior; skipped unless RUNNING_PROCESS_LIVE_TESTS=1",
    "windows_encoding: exercises every captured-output path on Windows against UTF-8 payloads under a cp1252 console; skipped unless RUNNING_PROCESS_WINDOWS_ENCODING_TESTS=1 and sys.platform == 'win32'. Run via: pytest -m windows_encoding tests/encoding",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806", "PT009", "PT027"]

[tool.coverage.run]
source = ["running_process"]
omit = ["tests/*", "ci/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.coverage.xml]
output = "coverage-python.xml"

[tool.coverage.html]
directory = "htmlcov"
