[package]
name = "testbins"
version = "0.0.0"
edition = "2021"
publish = false

[lints]
workspace = true

[[bin]]
name = "testbin-cwd-reporter"
path = "src/bin/cwd_reporter.rs"

[[bin]]
name = "testbin-dies-after-spawn"
path = "src/bin/dies_after_spawn.rs"

[[bin]]
name = "testbin-emitter"
path = "src/bin/emitter.rs"

[[bin]]
name = "testbin-env-dump"
path = "src/bin/env_dump.rs"

[[bin]]
name = "testbin-env-reporter"
path = "src/bin/env_reporter.rs"

[[bin]]
name = "testbin-sleeper"
path = "src/bin/sleeper.rs"

[[bin]]
name = "testbin-spawner"
path = "src/bin/spawner.rs"

[[bin]]
name = "testbin-stubborn"
path = "src/bin/stubborn.rs"

[[bin]]
# #150: raw-ANSI emitter used by the PTY passthrough integration
# tests. No external deps.
name = "testbin-tui-counter"
path = "src/bin/tui_counter.rs"

[[bin]]
# #448 / #449: stdin echoer for MITM substrate tests. Reads stdin in
# 4 KB chunks, writes each chunk back to stdout immediately (or
# suppresses with `--no-echo`).
name = "testbin-stdin-echoer"
path = "src/bin/stdin_echoer.rs"

# Unconditional because `dies_after_spawn` uses `running_process::{spawn, SpawnStdio}`
# on every platform. `spawner` also uses it but only inside `#[cfg(windows)]` blocks.
[dependencies]
running-process = { path = "../crates/running-process" }

# `stubborn` only needs libc on Unix (to SIG_IGN SIGTERM).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
