[package]
name = "running-process-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lightweight synchronous IPC client for the running-process daemon"

[dependencies]
running-process-proto = { path = "../running-process-proto", version = "3.1.0" }
prost = "0.14"
interprocess = "2"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
