[package]
name = "running-process-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Native process runtime for running-process"

[features]
default = []
originator-scan = []

[dependencies]
libc = "0.2"
portable-pty = "0.9"
sysinfo = "0.30"
thiserror = { workspace = true }
winapi = { version = "0.3", features = ["handleapi", "jobapi2", "processthreadsapi", "winnt", "minwindef", "windef", "winuser", "consoleapi", "processenv", "synchapi", "winbase", "wincon", "tlhelp32"] }

[dev-dependencies]
serde_json = "1"
