[package]
name = "running-process-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Daemon for running-process subprocess tracking"

[lib]
name = "running_process_daemon"
path = "src/lib.rs"

[[bin]]
name = "running-process-daemon"
path = "src/main.rs"

[dependencies]
running-process-proto = { path = "../running-process-proto", version = "3.0.13" }
running-process-core = { path = "../running-process-core" }
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
interprocess = { version = "2", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { workspace = true }
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
