[package]
name = "running-process-observer-interposer-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Windows DLL-injection interposer for the running-process file-hook tier (#551 slice 6)"
publish = false

# cdylib so the resulting `running_process_observer_interposer_windows.dll`
# can be `LoadLibrary`'d into target processes by the sidecar injector
# (slice 6b's pattern: suspend → CreateRemoteThread(LoadLibraryW) →
# resume; see #551 design body for the AV exposure mitigation
# rationale).
#
# rlib also listed so the workspace builds for non-Windows targets;
# the lib.rs body is `#![cfg(target_os = "windows")]`-gated to an
# empty stub on every other host.
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "winnt"] }

[lints]
workspace = true
