[package]
name = "running-process-observer-interposer-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Windows DLL-injection interposer for the running-process file-hook tier (#551 slice 6)"
publish = false

# cdylib so the resulting `running_process_observer_interposer_windows.dll`
# can be `LoadLibrary`'d into target processes by the sidecar injector
# (slice 6d's pattern: suspend → CreateRemoteThread(LoadLibraryW) →
# resume; see #551 design body for the AV exposure mitigation
# rationale).
#
# rlib also listed so the workspace builds for non-Windows targets;
# the lib.rs body is `#![cfg(target_os = "windows")]`-gated to an
# empty stub on every other host.
[lib]
crate-type = ["cdylib", "rlib"]

# Both deps are gated on `target_os = "windows"` AND `target_arch =
# "x86_64"`: retour's prologue disassembler (iced-x86) doesn't
# support ARM64, so retour-rs is x86-only on Windows. On Windows
# ARM64 the lib.rs body falls through to the inert stub (the
# `#![cfg(...)]` gate at the top of lib.rs also includes the
# x86_64 requirement). We still want the file to be a valid
# workspace member on every Windows arch so `cargo check` /
# `cargo build` succeed on ARM CI runners.
[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
# `retour` (formerly `detour-rs`) implements inline trampoline-based
# function detours: it overwrites the prologue of the target function
# with a jump to our hook, and stashes the original prologue in an
# allocated trampoline so the hook can call it. Alpha release is
# the only published version — see https://crates.io/crates/retour.
#
# We use the default-features-only build (no `static-detour`):
# `static-detour` pulls in the `nightly` feature, which uses
# `feature(unboxed_closures, tuple_trait)` and only compiles on
# nightly rust. The `RawDetour` API in the default build does the
# same job — give it a target fn pointer + hook fn pointer, it
# returns a trampoline you transmute back to the original signature
# to call.
retour = { version = "0.4.0-alpha.4", default-features = false }
# `windows-sys` for FFI type definitions used by detoured signatures
# (HANDLE, LPCWSTR, etc.) and the GetModuleHandleW/GetProcAddress
# pair used to look up `CreateFileW` etc. in kernel32.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    # `Win32_System_Threading` for `CreateThread`: slice 7b defers
    # the retour::RawDetour install to a worker thread so DllMain
    # can return immediately. Calling retour from DllMain itself
    # hangs because retour's prologue analysis (iced-x86) and
    # VirtualProtect re-enter the loader lock that LoadLibraryW
    # holds while invoking us.
    "Win32_System_Threading",
] }

[lints]
workspace = true
