[package]
name = "running-process-observer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sidecar / file-hook tier for running-process (#539 follow-up #551)"
publish = false

# Slice 1 scaffold: the helper binary is an inert placeholder that prints
# its version banner. Real injection vehicles (DLL/dylib + retour-rs /
# LD_PRELOAD / DYLD_INSERT_LIBRARIES) land in slices 4–6 of #551.
#
# CRITICAL: this crate is the ONLY place injection symbols may live. The
# main `running-process` crate must stay clean of `CreateRemoteThread`,
# `dlopen` of interposer libraries, etc. — static AV exposure mitigation
# per the original #539 design. Enforced via `objdump`/`dumpbin` assertion
# in PR 2 (embed-and-extract machinery).
[[bin]]
name = "running-process-observer-helper"
path = "src/bin/helper.rs"

[features]
default = []

# Opt-in feature flag for the embed-and-extract machinery (slice 2 of
# #551). When `off`, the crate compiles to an empty stub — consumers
# don't pay the binary-size cost or expose any sidecar symbols.
# When `on`, the cache + extract functions (`helper_cache_dir`,
# `extract_helper_blob`) are exposed and the dependencies on `dirs`
# + `blake3` come along. Slice 2b will wire `include_bytes!` of the
# actually-built helper binary; today the function is generic over
# the blob bytes so the build-dep chain can be deferred without
# changing the API.
embed-helper = ["dep:dirs", "dep:blake3", "dep:windows-sys"]

[dependencies]
# Slice 2 adds the cache + extract machinery dependencies, both gated
# behind the off-by-default `embed-helper` feature so consumers that
# don't opt in pay zero binary-size + zero static-AV-surface cost.
dirs = { version = "6", optional = true }
blake3 = { version = "1", optional = true }

# Slice 6d adds the Windows-side injection vehicle
# (`CreateRemoteThread(LoadLibraryW, dll_path)`). Gated on
# `target_os = "windows"` so the rest of the workspace doesn't pull
# `windows-sys` in on non-Windows hosts.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
], optional = true }

[dev-dependencies]
# `tempfile` for tests that exercise the cache-extract machinery
# against per-test directories instead of the shared
# `helper_cache_dir()` (which would race across parallel tests).
tempfile = "3"

[lints]
workspace = true
