[package]
name = "running-process-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PyO3 bindings for running-process"

[lib]
name = "_native"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2"
pyo3 = { workspace = true }
regex = "1"
running-process = { path = "../running-process", version = "3.4.1", features = ["originator-scan"] }
sysinfo = "0.30"
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "jobapi2", "processenv", "processthreadsapi", "synchapi", "winbase", "wincon", "winnt", "winuser"] }
running-process-proto = { path = "../running-process-proto", version = "3.4.1" }
running-process-client = { path = "../running-process-client", version = "3.4.1" }
prost = "0.14"
interprocess = "2"
