[package]
name = "running-process-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PyO3 bindings for running-process"

[lints]
# Phase 0 of #228: inherit the workspace `disallowed_methods = "deny"`.
workspace = true

[lib]
name = "_native"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2"
pyo3 = { workspace = true }
regex = "1"
running-process = { path = "../running-process", version = "4.0.3", features = ["client", "originator-scan"] }
sysinfo = "0.30"
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "jobapi2", "processenv", "processthreadsapi", "synchapi", "winbase", "wincon", "winnt", "winuser"] }
prost = "0.14"
interprocess = "2"
